<resources>
    <string name="app_name">Mantoo</string>
    <string name="halo_selamat_datang_di_mantoo">Halo, selamat datang di Mantoo 👋</string>
    <string name="task_subtitile">Kamu memiliki %1$s task pada hari ini</string>
    <string name="siapa_nama_kamu">Siapa nama kamu ?</string>
    <string name="hello_world">Hello World</string>
    <string name="welcome_messages">Halo, %1$s! \nSelamat Datang di Mantoo.</string>
    <string name="hello_world_this_is_temporary_text_view">Hello World, this is temporary text view</string>
    <string name="task_hari_ini">Task Hari Ini</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="task_category">Task Category</string>
    <string name="task_title">Task Title</string>
    <string name="kamu_punya_0_hari_ini">Kamu punya 0 hari ini</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="tambah_kategori_baru">Tambah Kategori Baru</string>
    <string name="add_category_success_message">Category berhasil ditambahkan</string>
    <string name="nama_category">Nama Category</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="nama_task">Nama Task</string>
    <string name="tanggal_task">Tanggal Task</string>
    <string name="masukkan_nama_task">Masukkan nama task</string>
    <string name="add_new_task">Tambah Task Baru</string>
    <string name="add_new_category">Tambah Category Baru</string>
    <string name="masukkan_tanggal_task">Masukkan tanggal task</string>
    <string name="jam_task">Jam Task</string>
    <string name="kategori_task">Kategori Task</string>
    <string name="masukkan_deskripsi_task">Masukkan deskripsi task</string>
    <string name="deskripsi_task">Deskripsi Task</string>
    <string name="masukkan_jam_task">Masukkan jam task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="daftar_task">Daftar Task</string>
    <string name="add_task_success_message">Task berhasil ditambahkan</string>
    <string name="prioritas_task">Prioritas Task</string>
    <string name="daftar_kategori">Daftar Kategori</string>
    <string name="judul_catatan">Judul Catatan</string>
    <string name="mulai_mengetik">Mulai Mengetik</string>
    <string name="note_description">Note Description</string>
    <string name="tidak_ada_catatan">Tidak ada catatan</string>
    <string name="tambah_task_baru">Tambah Task Baru</string>
    <string name="tambah_note_baru">Tambah Catatan Baru</string>
    <string name="edit_note">Edit Catatan</string>
    <string name="pin">Pin</string>
    <string name="cari_catatan">Cari Catatan</string>
</resources>