<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tx_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:text="@string/nama_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <EditText
        android:id="@+id/edt_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama_task"
        android:maxLines="1"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tx_task_title"/>

    <TextView
        android:id="@+id/tx_task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/tanggal_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_task_name"/>

    <EditText
        android:id="@+id/edt_task_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:hint="@string/masukkan_tanggal_task"
        app:layout_constraintEnd_toStartOf="@+id/img_calendar_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_task_date" />

    <ImageView
        android:id="@+id/img_calendar_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_task"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/edt_task_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_task_date"
        app:tint="@color/dark_blue_200" />

    <TextView
        android:id="@+id/tx_task_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/jam_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_task_date"/>

    <EditText
        android:id="@+id/edt_task_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:hint="@string/masukkan_jam_task"
        app:layout_constraintEnd_toStartOf="@+id/img_calendar_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_task_time" />

    <ImageView
        android:id="@+id/img_clock_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_time"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/edt_task_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_task_time"
        app:tint="@color/dark_blue_200" />

    <TextView
        android:id="@+id/tx_task_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/kategori_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_task_time"/>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tx_task_category" />

    <TextView
        android:id="@+id/tx_task_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/prioritas_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_category"/>

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tx_task_priority" />

    <TextView
        android:id="@+id/tx_task_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/deskripsi_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_priority"/>

    <EditText
        android:id="@+id/edt_task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:minLines="3"
        android:hint="@string/masukkan_deskripsi_task"
        app:layout_constraintEnd_toStartOf="@+id/img_calendar_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_task_desc" />

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edt_task_desc"/>

</androidx.constraintlayout.widget.ConstraintLayout>