<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue_200"
        android:paddingVertical="32dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tx_name"
            style="@style/TextContent.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_messages"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/tx_name">

        </View>

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="16dp"
        app:contentPaddingBottom="32dp"
        app:contentPaddingLeft="16dp"
        app:contentPaddingRight="16dp"
        app:contentPaddingTop="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:id="@+id/tx_unknown"
            android:text="@string/kamu_punya_0_hari_ini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            style="@style/TextContent.Regular"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tx_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_hari_ini"
        android:layout_margin="24dp"
        style="@style/TextContent.SectionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/tx_see_all_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lihat_semua"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tx_task_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tx_task_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/task_item_row"
        app:layout_constraintTop_toBottomOf="@id/tx_task_title"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/main_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_task"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fab_add_task"
        app:layout_constraintEnd_toStartOf="@+id/fab_task"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_category"
        tools:visibility="visible" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/main_fab"
        app:layout_constraintEnd_toStartOf="@+id/main_fab"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_add_task"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:elevation="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_add_task"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>